# TextualGameEngine

./: .gitignore  CMakeLists.txt  GUIDE_SCENE_FR.md  README.md  temp_edit.py  temp_input.txt  temp_input_run.txt
data/class/: Assassin.txt  Berserker.txt  Guerrier.txt  Mage.txt  Necromancien.txt  Paladin.txt  Rodeur.txt
data/scenes/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  17.txt  18.txt  19.txt  2.txt  22.txt  24.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  atelier.txt  atelier_grille.txt  caves.txt  entrepot.txt  marche.txt  start.txt  toit.txt  tour_de_guet.txt
data/scenes/dragon_&_princess/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/scenes/medieval_cave/: 0.txt  1.txt  101.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
data/scenes/old_scenes/dragon_&_princess/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  3.txt  (+7 more)
data/scenes/space_craft/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
guides/CLASS/: GUIDE_CLASS_FR.md
guides/SCENE/: GUIDE_SCENE_EN.md  GUIDE_SCENE_FR.md
src/: Competence.cpp  Competence.h  Entite.cpp  Entite.h  GameUI.cpp  GameUI.h  Histoire.cpp  Histoire.h  Objet.cpp  Objet.h  Scene.h  SceneParser.cpp  SceneParser.h  SceneWorld.cpp  SceneWorld.h  main.cpp  ui.cpp  ui.h  utils.cpp  utils.h
tests/: dump_scene.cpp  parser_tests.cpp
tests/data/: s1.txt  s2.txt
(+17 files in other folders)
